// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReservePalletRow Component Renders a ReservePallet 1`] = `
<Context.Provider
  value={
    Object {
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "@@observable": [Function],
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ReservePalletRow
    reservePallet={
      Object {
        "createDate": "2022-01-05T12:04:50.000Z",
        "expirationDate": "12/31/2022",
        "id": 1,
        "items": Array [
          Object {
            "itemDesc": "Nature Valley Honey Nut Granola Bars",
            "itemNbr": 500252,
            "locationType": 8,
            "price": 0,
            "upcNbr": "750500252570",
          },
          Object {
            "itemDesc": "Cabbage",
            "itemNbr": 123456,
            "locationType": 8,
            "price": 0,
            "upcNbr": "123456000789",
          },
        ],
        "palletCreateTS": "2021-01-01",
        "palletId": 1,
        "statusCode": 200,
      }
    }
    section={
      Object {
        "id": 1,
        "name": "Section 1",
      }
    }
  />
</Context.Provider>
`;

exports[`ReservePalletRow Component Renders a ReservePallet with an item with a long name 1`] = `
<Context.Provider
  value={
    Object {
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "@@observable": [Function],
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ReservePalletRow
    reservePallet={
      Object {
        "createDate": "2022-01-05T12:04:50.000Z",
        "expirationDate": "12/31/2022",
        "id": 1,
        "items": Array [
          Object {
            "itemDesc": "Nature Valley Honey Nut Granola Bars",
            "itemNbr": 500252,
            "locationType": 8,
            "price": 0,
            "upcNbr": "750500252570",
          },
          Object {
            "itemDesc": "Cabbage",
            "itemNbr": 123456,
            "locationType": 8,
            "price": 0,
            "upcNbr": "123456000789",
          },
          Object {
            "itemDesc": "An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description",
            "itemNbr": 980078597,
            "locationType": 8,
            "price": 2.4,
            "upcNbr": "123456789098",
          },
        ],
        "palletCreateTS": "2021-01-01",
        "palletId": 1,
        "statusCode": 200,
      }
    }
    section={
      Object {
        "id": 1,
        "name": "Section 1",
      }
    }
  />
</Context.Provider>
`;

exports[`ReservePalletRow Component Renders a ReservePallet with no items 1`] = `
<Context.Provider
  value={
    Object {
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "@@observable": [Function],
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ReservePalletRow
    reservePallet={
      Object {
        "createDate": "2022-01-05T12:04:50.000Z",
        "expirationDate": "12/31/2022",
        "id": 1,
        "items": Array [],
        "palletCreateTS": "2021-01-01",
        "palletId": 1,
        "statusCode": 200,
      }
    }
    section={
      Object {
        "id": 1,
        "name": "Section 1",
      }
    }
  />
</Context.Provider>
`;
